# tossify-py

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  ruff.toml  scraping.py  viewer.html
data/: faq_a.csv  faq_b.csv
