[project]
name = "tossify-py"
version = "0.1.0"
description = ""
authors = [
    {name = "changon.you",email = "dbcksrhs30@yahoo.co.kr"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=1.0.0,<3.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.12.1,<5.0.0)",
    "certifi (>=2026.1.4,<2027.0.0)",
    "cffi (>=2.0.0,<3.0.0)",
    "charset-normalizer (>=3.4.4,<4.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "distro (>=1.9.0,<2.0.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "httpcore (>=1.0.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.11,<4.0)",
    "pyasn1 (>=0.6.2,<0.7.0)",
    "pyasn1-modules (>=0.4.2,<0.5.0)",
    "pycparser (>=3.0,<4.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-core (>=2.41.5,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "typing-inspection (>=0.4.2,<0.5.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
